--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "autoprefixer": "^10.3.1",
+    "html-loader": "^4.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^8.3.1"
+    "postcss-cli": "^8.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
